--- a/app/Gemfile
+++ b/app/Gemfile
@@ -18,6 +18,7 @@ gem 'uglifier', '>= 1.3.0'
 # gem 'mini_racer', platforms: :ruby
 gem 'pry', '~> 0.12.2'
 gem 'sendgrid-ruby'
+gem 'rails_admin', "~> 1.2"
 
 # Use CoffeeScript for .coffee assets and views
 gem 'coffee-rails', '~> 4.2'
