--- a/app/Gemfile
+++ b/app/Gemfile
@@ -42,6 +42,8 @@ gem 'bootsnap', '>= 1.1.0', require: false
 # Pagination gem
 gem 'kaminari'
 
+gem 'rails_admin', '~> 2.0'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
